Fix shortest path not starting with remote workshop Initialize LocationService before processing Journal